gateone.js:  The toolbar (icons) will now take the width of the scrollbar into account and be adjusted accordingly to make sure it isn't too far to the left or overlapping the scrollbar. gateone.js:  Changed how the sideinfo (title on the side of the terminal) is scaled to fit in order to make it line up better with the toolbar. gateone.js:  Fixed the minor annoyance of having to click twice on terminals in grid view to select them.  You only need to click once (again). gateone.js:  Added GateOne.Utils.isVisible().  Returns true if an element is visible.  False if not.  NOTE:  Only checks style.display and style.opacity. CSS Themes:  Changed how sideinfo is rotated (from bottom to top) in order to make it easier to calculate the distance between it and the scrollbar. Logging Plugin:  Fixed a bug where GateOne.prefs.logLevel wasn't getting added to GateOne.prefs.noSavePrefs properly. Playback Plugin:  Fixed a bug where new terminals might not be scrolled to the bottom. hello_embedded tutorial:  Finally done!  Also fixed a few bugs here and there.

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -304,16 +304,16 @@ hr {
 }
 #{{container}} .sideinfo {
     -webkit-transform: rotate(90deg);
-    -webkit-transform-origin: right bottom;
+    -webkit-transform-origin: right top;
     -moz-transform: rotate(90deg);
-    -moz-transform-origin: right bottom;
+    -moz-transform-origin: right top;
     -ms-transform: rotate(90deg);
-    -ms-transform-origin: right bottom;
+    -ms-transform-origin: right top;
     -o-transform: rotate(90deg);
-    -o-transform-origin: right bottom;
+    -o-transform-origin: right top;
     transform: rotate(90deg);
-    transform-origin: right bottom;
-    right: 2.2em;
+    transform-origin: right top;
+    right: 1em; /* This will get overridden by a px value calculated based on the width of the scrollbar */
     bottom: 0;
     color: white;
     position: absolute;
@@ -322,7 +322,7 @@ hr {
     font-size: 1.3em;
     opacity: 0.5;
     font-weight: bold;
-    margin-bottom: 0.1em;
+    margin-bottom: -1em;
     z-index: 10;
 }
 #{{prefix}}notice {
